Add anime page and update home navigation
Introduced a new '/anime' route in main.py and created the corresponding anime.html template. Updated home.html to link to the anime tracking page. Added placeholder files anime.txt and types for future use.

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,25 +5,25 @@
     </head>
 
     <body>
-        <h1 title="hi there!" style="color: saddlebrown; font-size: 48px">
+        <h1 title="hi there!" style="text-align: center; color: saddlebrown; font-size: 48px">
             BEAR IN IT
         </h1>
 
         <hr>
 
-        <h2 title="Sex" style="color: green; font-size: 36px">
+        <h2 title="Sex" style="text-align: center; color: green; font-size: 36px">
             What is BEAR IN IT?
         </h2>
 
         <p title="is" style="color: black; font-size: 24px">
             It is a pet-project for following:<br>
-                - Tracking my anime watching;<br>
+                <a href="/anime" style="color: black">- Tracking my anime watching;</a><br>
                 - Checking weather in your city;
         </p>
 
         <hr>
 
-        <h2 title="my" style="color: green; font-size: 36px">
+        <h2 title="my" style="text-align: center; color: green; font-size: 36px">
             Who is the author of this web-page?
         </h2>
 
