Add bear image and update anime page layout
Added bear.jpeg to static images and updated style.css with a new .logo class. Refactored anime.html to improve structure by wrapping content in 'library' and 'anime' divs for better organization.

--- a/static/style.css
+++ b/static/style.css
@@ -8,6 +8,13 @@ body {
         background-color: #999fff;
     }
 
+    .logo {
+        width: 80px;
+        height: auto;
+        display: block;
+        margin: 0 auto;
+    }
+
     h1 {
       font-size: 50px;
       text-align: center;
@@ -37,6 +44,7 @@ body {
         text-align: left;
         color: #00BBAA;
     }
+
 }
 
 
