Refactor styles and update home/anime templates
Renamed style.css to styleAnime.css and created a new styleHome.css for the home page. Updated anime.html and home.html to use their respective stylesheets and modernized their structure and content for improved clarity and navigation.

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,36 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>BEAR IN IT</title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='styleHome.css') }}">
+        <title>Bear</title>
     </head>
-
     <body>
-        <h1 title="hi there!" style="text-align: center; color: saddlebrown; font-size: 48px">
-            BEAR IN IT
-        </h1>
-
         <hr>
-
-        <h2 title="Sex" style="text-align: center; color: green; font-size: 36px">
-            What is BEAR IN IT?
-        </h2>
-
-        <p title="is" style="color: black; font-size: 24px">
-            It is a pet-project for following:<br>
-                <a href="/anime" style="color: black">- Tracking my anime watching;</a><br>
-                - Checking weather in your city;
-        </p>
-
+        <h1 title="Bear">Bear</h1>
         <hr>
-
-        <h2 title="my" style="text-align: center; color: green; font-size: 36px">
-            Who is the author of this web-page?
-        </h2>
-
-        <p>
-            <a href="http://github.com/MrQwerty13" style="color: black; font-size: 24px">
-                MrQwerty13
-            </a>
-        </p>
+        <h2 title="Hi there!">Welcome to Bear's web-page</h2>
+        <h2 title="Just click on one of them bellow 😁">This web-page has:</h2>
+        <h3>
+            <a href="/">Home Page</a>
+            <br>
+            <a href="/anime">Anime Library</a>
+            <br>
+            <a href="/">Weather Broadcast</a>
+        </h3>
     </body>
 </html>
