--- a/templates/anime.html
+++ b/templates/anime.html
@@ -1,28 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <title>Bear's Anime</title>
+      <link rel="stylesheet" href="{{ url_for('static', filename='styleAnime.css') }}">
+      <title>Bear's Anime</title>
   </head>
-
   <body>
-
     <hr>
-
     <h1 title="Bear's Anime">
       Bear's Anime
     </h1>
-
     <hr>
-
     <div class="library">
       <h2 title="Awwww, hottie">
-        My list of anime:
+          My list of anime:
       </h2>
-
       <div class="anime">
         {% for genre, titles in anime.items() %}
-          <h3 title="It is the best ganre">{{ genre }}  ☟</h3>
+          <h3 title="It is the best ganre">{{ genre }} ☟</h3>
           <ul>
             {% for title in titles %}
               <li title="I love it!">⁍ {{ title }}</li>
@@ -31,5 +25,5 @@
         {% endfor %}
       </div>
     </div>
-  </body>
+</body>
 </html>
