Add author page and update navigation links
Introduced a new '/author' route and corresponding author.html template with information about the project author. Updated navigation links in anime.html and home.html to use the new '/author' route and unified Russian labels. Also changed the stylesheet in home.html to styleAnime.css for consistency.

--- a/templates/anime.html
+++ b/templates/anime.html
@@ -14,9 +14,9 @@
         <a href="/anime">Bear's Anime</a>
       </div>
       <nav class="nav-links">
-        <a href="/">Home</a>
-        <a href="/anime">Anime Library</a>
-        <a href="/">About Author</a>
+        <a href="/">Дом</a>
+        <a href="/anime">Библиотека Аниме</a>
+        <a href="/author">Об Авторе</a>
       </nav>
     </div>
   </header>
