--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Bear's Anime - Home</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='styleHome.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='styleAnime.css') }}">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
       <nav class="nav-links">
         <a href="/">Дом</a>
         <a href="/anime">Библиотека Аниме</a>
-        <a href="/about">Об Авторе</a>
+        <a href="/author">Об Авторе</a>
       </nav>
     </div>
   </header>
@@ -28,8 +28,8 @@
       <p>
         Bear's Anime — это уютное место, где ты можешь находить и отслеживать свои любимые аниме-сериалы.
         Исследуй аниме по жанрам, читай краткие описания и переходи по ссылкам, чтобы узнать больше.
-        Сайт объединяет персональную аниме-библиотеку с простым и дружелюбным интерфейсом, созданным для фанатов,
-        которые любят порядок, удобный просмотр и наслаждение аниме.
+        Сайт объединяет персональную аниме-библиотеку с простым и дружелюбным интерфейсом,
+        созданным для фанатов, которые любят порядок, удобный просмотр и наслаждение аниме.
       </p>
 
       <p>
