--- a/templates/anime.html
+++ b/templates/anime.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Bear's Anime - Библиотека</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='styleAnime.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='animeStyle.css') }}">
 </head>
 
 <body>
@@ -15,8 +15,9 @@
       </div>
       <nav class="nav-links">
         <a href="/">Дом</a>
-        <a href="/anime">Библиотека Аниме</a>
-        <a href="/author">Об Авторе</a>
+        <a href="/anime">Библиотека аниме</a>
+        <a href="/author">Об авторе</a>
+        <a href="/feedback">Обратная связь</a>
       </nav>
     </div>
   </header>
